fixing the gap

--- a/04-Flex/07/styles.css
+++ b/04-Flex/07/styles.css
@@ -8,7 +8,6 @@ body {
   flex-wrap: wrap;
   border: 2px solid blue;
   width: 400px;
-  height: 200px;
   padding: 1em;
 }
 .item {
@@ -25,7 +24,7 @@ body {
   gap: 0 2em;
 }
 .flex-container.gap {
-  gap: 2em;
+  gap: 1.5em;
 }
 
 
